--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <!-- 10% VAT only on interest -->
         <div class="flex justify-between items-center">
-          <span class="text-sm text-gray-600">سود محاسبه شده + ۱۰٪ ارزش افزوده فقط روی سود :</span>
+          <span class="text-sm text-gray-600">  ۱۰٪ ارزش افزوده  :</span>
           <span id="interest-vat-display" class="font-medium text-gray-800">0</span>
         </div>
 
